--- a/css/base.css
+++ b/css/base.css
@@ -16,3 +16,29 @@ h1,h2,h3,h4,h5,h6{
     font-size: 100%;
     font-weight: normal;
 }
+em,i{
+    font-style: normal;
+}
+a{text-decoration:none ;}
+li{list-style-type: none;vertical-align: top;}
+img{
+    border: none;
+    vertical-align: top;
+}
+textarea{
+    overflow: auto;
+    resize: none;
+}
+table{
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+/* 常用公共样式 */
+.fl{
+    float: left;
+    display: inline;
+}
+.fr{
+    float: right;
+    display: inline;
+}
