--- a/css/common.css
+++ b/css/common.css
@@ -11,3 +11,81 @@
 .link:hover{
     color:#f01414;
 }
+.dropdown{
+    position: relative;
+}
+.dropdown_toggle{
+    position: relative;
+    z-index: 2;
+}
+.dropdown_arrow{
+    display: inline-block;
+    background-repeat:  no-repeat;
+}
+.dropdown_layer{
+    z-index: 1;
+    display: none;
+    position: absolute;
+}
+.dropdown_left{
+    left: 0;
+    right: auto;
+}
+.dropdown_right{
+    left: auto;
+    right: 0;
+}
+/* menu独有的样式 */
+.menu .dropdown_toggle{
+   display: block;
+    height: 100%  ;
+    padding: 0 16px 0 12px;
+    border-left:1px solid #f3f5f7;
+    border-right: 1px solid #f3f5f7;
+}
+.menu .dropdown_arrow{
+  
+    width: 8px;
+    height: 6px;
+    background-image: url(../img/dropdown-arrow.png);
+    margin-left: 8px;
+    vertical-align: middle;
+}
+.menu .dropdown_layer{
+    background-color: #fff;
+    top: 43px;
+    border:1px solid #cdd0d4;
+
+}
+.menu .dropdown_left{
+    left: 0;
+    right: auto;
+}
+.menu .dropdown_right{
+    left: auto;
+    right: 0;
+}
+.menu .menu_item{
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    color: #4d555d;
+    white-space: nowrap;
+    padding: 0 12px;
+}
+.menu .menu_item:hover{
+    background-color: #f3f5f7;
+}
+/* 动态的dropdown-active */
+.menu_active .dropdown_toggle{
+    background-color: #fff;
+    border-color: #cdd0d4;
+}
+.menu_active .dropdown_arrow{
+    /* background-image: url(../img/dropdown-arrow-active.png); */
+    transform: rotate(180deg);
+    transition: all 0.5s;
+}
+.menu_active .dropdown_layer{
+    display: block;
+}
